--- a/YolesaBackend/appsettings.json
+++ b/YolesaBackend/appsettings.json
@@ -7,5 +7,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "YolesaContext": "data source=(local);initial catalog=YolesaDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+  },
+  "Auth0": {
+    "Domain": "yolesa.auth0.com",
+    "ApiIdentifier": "https://yolesa/api"
   }
 }
